# Ros2-fundamentals

./: CMakeLists.txt  README.md
scripts/: action_client.py  action_server.py  picture_client.py  picture_server.py  publish.py  service_client.py  service_server.py  subscribe.py
srv/: OddEvenCheck.srv
